// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Login Screen renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#004D40",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="55%"
    bbWidth="70%"
    height="55%"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        undefined,
        false,
        Object {
          "flex": 0,
          "height": "55%",
          "width": "70%",
        },
      ]
    }
    vbHeight={349}
    vbWidth={445}
    width="70%"
  >
    <RNSVGGroup
      fill={
        Array [
          0,
          0,
          0,
          0,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      font={Object {}}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={Array []}
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    >
      <RNSVGDefs>
        <RNSVGClipPath
          name="prefix__a"
        >
          <RNSVGPath
            d="M0 0h595.276v841.89H0z"
            fill={
              Array [
                0,
                0,
                0,
                0,
                1,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth="1"
            x={0}
            y={0}
          />
        </RNSVGClipPath>
      </RNSVGDefs>
      <RNSVGGroup
        clipPath="prefix__a"
        fill={
          Array [
            0,
            0,
            0,
            0,
            1,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        font={Object {}}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            -81.5,
            -223.558,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={Array []}
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth="1"
        x={0}
        y={0}
      >
        <RNSVGPath
          d="M97 479.64h414.994c7.68.084 9.719 2.543 9.75 8.93v70.695c.145 5.773-2.422 8.912-9.75 8.93H97c-8.811-.24-10.92-3.589-11-8.93V488.57c-.008-5.497 3.156-8.846 11-8.93z"
          fill={null}
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeMiterlimit",
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={
            Array [
              0,
              1,
              1,
              1,
              1,
            ]
          }
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={2}
          strokeLinejoin={0}
          strokeMiterlimit={3}
          strokeOpacity={1}
          strokeWidth="9"
          x={0}
          y={0}
        />
        <RNSVGPath
          d="M86 347.07v116.625h435.75v-199.5l-33.375-21-33 21v135h-7.5v-89.25l-37.125-23.25-34.875 23.25v89.25H368v-41.25l-19.125-31.125h-15.75v-12.375h-23.25v12.375H295.25l-18 31.125v41.25h-7.125v-35.25L233.5 223.695l-39.875 140.25v35.25h-7.875V347.07l-51.375-32.625z"
          fill={
            Array [
              0,
              1,
              1,
              1,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "stroke",
              "strokeLinecap",
              "strokeMiterlimit",
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={
            Array [
              0,
              1,
              1,
              1,
              1,
            ]
          }
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={2}
          strokeLinejoin={0}
          strokeMiterlimit={3}
          strokeOpacity={1}
          strokeWidth="1"
          x={0}
          y={0}
        />
        <RNSVGPath
          d="M148.398 542.468h-16.687l-9.586-25.289-3.563-.562v-10.172h21.891v10.172l-2.578.562 4.055 13.336 4.054-13.336-2.578-.562v-10.172h18.117v10.172l-3.539.562zm48.352-.023h-12.539l-1.172-5.555h-9.211l-1.172 5.555h-12.539V531.57l2.719-.539 6.492-21.586h18.188l6.539 21.586 2.695.539zm-18.328-25.922l-3.164 12.961h6.351zm38.719 2.695v14.227q.984 0 1.875-.27.89-.269 1.652-.703.762-.434 1.383-.961.621-.527 1.09-1.066h3.914v12h-26.813v-9.352l2.813-.539v-13.336l-2.813-.539v-9.234h19.735v9.234zm50.976-.539l-2.836.539q-.023.703-.023 1.371v4.91q0 4.688-1.289 8.028-1.289 3.34-3.492 5.472-2.204 2.133-5.168 3-2.965.868-6.293.868-3.844 0-7.184-.868-3.34-.867-5.812-3.011-2.473-2.145-3.891-5.473-1.418-3.328-1.418-8.016v-6.281l-2.813-.539v-9.234h18.305v9.234l-2.812.539v3.926q0 .574.011 1.066.012.492.012.856v.48q0 .539.023 1.254.024.715.188 1.477.164.761.504 1.5.34.738.961 1.324.621.586 1.57.949.949.363 2.356.363 1.406 0 2.379-.363.972-.363 1.593-.961.621-.597.973-1.347.351-.75.504-1.512.152-.762.187-1.477.035-.715.035-1.254v-.527q0-.363-.011-.844-.012-.48-.012-1.031V519.218l-2.812-.539v-9.234h16.265zm20.555.188v5.085l6.492-1.382v6.679l-6.492-1.406v5.18q1.406 0 2.719-.199 1.312-.2 2.437-.551 1.125-.352 2.063-.821.937-.468 1.617-1.007h3.211v12H271.75v-9.352l2.812-.539v-13.289l-2.812-.539v-9.281h28.969v12h-3.211q-.68-.516-1.617-.985-.938-.468-2.063-.82-1.125-.352-2.437-.563-1.313-.21-2.719-.21zm14.367-12.422h33v12h-3.937q-.399-.516-.915-1.055-.515-.539-1.148-.973-.633-.433-1.383-.703-.75-.269-1.617-.269v16.242l3 .586v10.172h-21v-10.172l3-.586v-16.242q-.867 0-1.617.269-.75.27-1.383.703-.633.434-1.148.973-.516.539-.914 1.055h-3.938zm54.328 36.422q-4.125 0-7.722-.879-3.598-.879-6.258-3.024-2.66-2.144-4.196-5.472-1.535-3.329-1.535-7.993 0-4.57 1.535-7.793 1.536-3.222 4.207-5.25 2.672-2.027 6.258-2.964 3.586-.938 7.711-.938 4.102 0 7.699.938 3.598.937 6.282 2.964 2.683 2.028 4.23 5.25 1.547 3.223 1.547 7.793 0 3.094-.703 5.614-.703 2.519-1.981 4.476-1.277 1.957-3.07 3.375t-3.996 2.344q-2.203.926-4.734 1.242-2.532.317-5.274.317zm0-24.329q-1.383 0-2.332.352-.949.352-1.57.914-.621.563-.973 1.289-.351.727-.504 1.488-.152.762-.187 1.5-.035.739-.035 1.301 0 .539.023 1.278.023.738.164 1.546.141.809.469 1.606.328.797.949 1.43.621.632 1.594 1.019.972.387 2.402.387 1.406 0 2.379-.375.973-.375 1.594-.996.621-.621.972-1.395.352-.773.504-1.558.153-.786.188-1.536t.035-1.289q0-.562-.035-1.3-.035-.739-.188-1.512-.152-.774-.504-1.512-.351-.738-.972-1.324-.621-.586-1.594-.949-.973-.364-2.379-.364zm49.266 23.93H390.93l-9-23.273-3.352-.516v-9.234h21.399v9.234l-2.438.516 3.82 12.281 3.821-12.281-2.438-.516v-9.234h21.399v9.234l-2.414.516 3.796 12.281 3.821-12.281-2.438-.516v-9.352h16.219v9.352l-3.328.516-9 23.273h-15.68l-4.265-12.68zm61.711-.023l-11.274-17.321v7.43l2.836.516v9.375h-14.109v-9.352l2.812-.539v-13.336l-2.812-.539v-9.234h16.922l11.273 17.789v-7.969l-2.812-.586v-9.234h14.086v9.234l-2.813.539v13.336l2.813.539v9.352z"
          fill={
            Array [
              0,
              1,
              1,
              1,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth="1"
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    style={
      Object {
        "marginBottom": "12%",
        "width": "65%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Roboto",
          "fontSize": 17,
          "marginBottom": "4%",
          "textAlign": "center",
        }
      }
    >
      Your first time at ValueTown?
    </Text>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 5,
            "elevation": 3,
            "fontSize": 16,
            "justifyContent": "center",
            "padding": 16,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#004D40",
              "fontFamily": "Roboto",
            }
          }
        >
          CONTINUE AS NEW USER
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Testing Login Screen renders correctly after login error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#004D40",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="55%"
    bbWidth="70%"
    height="55%"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        undefined,
        false,
        Object {
          "flex": 0,
          "height": "55%",
          "width": "70%",
        },
      ]
    }
    vbHeight={349}
    vbWidth={445}
    width="70%"
  >
    <RNSVGGroup
      fill={
        Array [
          0,
          0,
          0,
          0,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      font={Object {}}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={Array []}
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    >
      <RNSVGDefs>
        <RNSVGClipPath
          name="prefix__a"
        >
          <RNSVGPath
            d="M0 0h595.276v841.89H0z"
            fill={
              Array [
                0,
                0,
                0,
                0,
                1,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth="1"
            x={0}
            y={0}
          />
        </RNSVGClipPath>
      </RNSVGDefs>
      <RNSVGGroup
        clipPath="prefix__a"
        fill={
          Array [
            0,
            0,
            0,
            0,
            1,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        font={Object {}}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            -81.5,
            -223.558,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={Array []}
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth="1"
        x={0}
        y={0}
      >
        <RNSVGPath
          d="M97 479.64h414.994c7.68.084 9.719 2.543 9.75 8.93v70.695c.145 5.773-2.422 8.912-9.75 8.93H97c-8.811-.24-10.92-3.589-11-8.93V488.57c-.008-5.497 3.156-8.846 11-8.93z"
          fill={null}
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeMiterlimit",
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={
            Array [
              0,
              1,
              1,
              1,
              1,
            ]
          }
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={2}
          strokeLinejoin={0}
          strokeMiterlimit={3}
          strokeOpacity={1}
          strokeWidth="9"
          x={0}
          y={0}
        />
        <RNSVGPath
          d="M86 347.07v116.625h435.75v-199.5l-33.375-21-33 21v135h-7.5v-89.25l-37.125-23.25-34.875 23.25v89.25H368v-41.25l-19.125-31.125h-15.75v-12.375h-23.25v12.375H295.25l-18 31.125v41.25h-7.125v-35.25L233.5 223.695l-39.875 140.25v35.25h-7.875V347.07l-51.375-32.625z"
          fill={
            Array [
              0,
              1,
              1,
              1,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "stroke",
              "strokeLinecap",
              "strokeMiterlimit",
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={
            Array [
              0,
              1,
              1,
              1,
              1,
            ]
          }
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={2}
          strokeLinejoin={0}
          strokeMiterlimit={3}
          strokeOpacity={1}
          strokeWidth="1"
          x={0}
          y={0}
        />
        <RNSVGPath
          d="M148.398 542.468h-16.687l-9.586-25.289-3.563-.562v-10.172h21.891v10.172l-2.578.562 4.055 13.336 4.054-13.336-2.578-.562v-10.172h18.117v10.172l-3.539.562zm48.352-.023h-12.539l-1.172-5.555h-9.211l-1.172 5.555h-12.539V531.57l2.719-.539 6.492-21.586h18.188l6.539 21.586 2.695.539zm-18.328-25.922l-3.164 12.961h6.351zm38.719 2.695v14.227q.984 0 1.875-.27.89-.269 1.652-.703.762-.434 1.383-.961.621-.527 1.09-1.066h3.914v12h-26.813v-9.352l2.813-.539v-13.336l-2.813-.539v-9.234h19.735v9.234zm50.976-.539l-2.836.539q-.023.703-.023 1.371v4.91q0 4.688-1.289 8.028-1.289 3.34-3.492 5.472-2.204 2.133-5.168 3-2.965.868-6.293.868-3.844 0-7.184-.868-3.34-.867-5.812-3.011-2.473-2.145-3.891-5.473-1.418-3.328-1.418-8.016v-6.281l-2.813-.539v-9.234h18.305v9.234l-2.812.539v3.926q0 .574.011 1.066.012.492.012.856v.48q0 .539.023 1.254.024.715.188 1.477.164.761.504 1.5.34.738.961 1.324.621.586 1.57.949.949.363 2.356.363 1.406 0 2.379-.363.972-.363 1.593-.961.621-.597.973-1.347.351-.75.504-1.512.152-.762.187-1.477.035-.715.035-1.254v-.527q0-.363-.011-.844-.012-.48-.012-1.031V519.218l-2.812-.539v-9.234h16.265zm20.555.188v5.085l6.492-1.382v6.679l-6.492-1.406v5.18q1.406 0 2.719-.199 1.312-.2 2.437-.551 1.125-.352 2.063-.821.937-.468 1.617-1.007h3.211v12H271.75v-9.352l2.812-.539v-13.289l-2.812-.539v-9.281h28.969v12h-3.211q-.68-.516-1.617-.985-.938-.468-2.063-.82-1.125-.352-2.437-.563-1.313-.21-2.719-.21zm14.367-12.422h33v12h-3.937q-.399-.516-.915-1.055-.515-.539-1.148-.973-.633-.433-1.383-.703-.75-.269-1.617-.269v16.242l3 .586v10.172h-21v-10.172l3-.586v-16.242q-.867 0-1.617.269-.75.27-1.383.703-.633.434-1.148.973-.516.539-.914 1.055h-3.938zm54.328 36.422q-4.125 0-7.722-.879-3.598-.879-6.258-3.024-2.66-2.144-4.196-5.472-1.535-3.329-1.535-7.993 0-4.57 1.535-7.793 1.536-3.222 4.207-5.25 2.672-2.027 6.258-2.964 3.586-.938 7.711-.938 4.102 0 7.699.938 3.598.937 6.282 2.964 2.683 2.028 4.23 5.25 1.547 3.223 1.547 7.793 0 3.094-.703 5.614-.703 2.519-1.981 4.476-1.277 1.957-3.07 3.375t-3.996 2.344q-2.203.926-4.734 1.242-2.532.317-5.274.317zm0-24.329q-1.383 0-2.332.352-.949.352-1.57.914-.621.563-.973 1.289-.351.727-.504 1.488-.152.762-.187 1.5-.035.739-.035 1.301 0 .539.023 1.278.023.738.164 1.546.141.809.469 1.606.328.797.949 1.43.621.632 1.594 1.019.972.387 2.402.387 1.406 0 2.379-.375.973-.375 1.594-.996.621-.621.972-1.395.352-.773.504-1.558.153-.786.188-1.536t.035-1.289q0-.562-.035-1.3-.035-.739-.188-1.512-.152-.774-.504-1.512-.351-.738-.972-1.324-.621-.586-1.594-.949-.973-.364-2.379-.364zm49.266 23.93H390.93l-9-23.273-3.352-.516v-9.234h21.399v9.234l-2.438.516 3.82 12.281 3.821-12.281-2.438-.516v-9.234h21.399v9.234l-2.414.516 3.796 12.281 3.821-12.281-2.438-.516v-9.352h16.219v9.352l-3.328.516-9 23.273h-15.68l-4.265-12.68zm61.711-.023l-11.274-17.321v7.43l2.836.516v9.375h-14.109v-9.352l2.812-.539v-13.336l-2.812-.539v-9.234h16.922l11.273 17.789v-7.969l-2.812-.586v-9.234h14.086v9.234l-2.813.539v13.336l2.813.539v9.352z"
          fill={
            Array [
              0,
              1,
              1,
              1,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth="1"
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    style={
      Object {
        "marginBottom": "12%",
        "width": "65%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Roboto",
          "fontSize": 17,
          "marginBottom": "4%",
          "textAlign": "center",
        }
      }
    >
      fake-failure occurred
    </Text>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 5,
            "elevation": 3,
            "fontSize": 16,
            "justifyContent": "center",
            "padding": 16,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#004D40",
              "fontFamily": "Roboto",
            }
          }
        >
          TRY AGAIN
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Testing Login Screen renders correctly when logging in and waiting 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#004D40",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
    }
  }
>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={true}
  >
    <View
      style={
        Object {
          "backgroundColor": "#004D40E9",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#FFFFFF"
        hidesWhenStopped={true}
        size="large"
      />
    </View>
  </Modal>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="55%"
    bbWidth="70%"
    height="55%"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        undefined,
        false,
        Object {
          "flex": 0,
          "height": "55%",
          "width": "70%",
        },
      ]
    }
    vbHeight={349}
    vbWidth={445}
    width="70%"
  >
    <RNSVGGroup
      fill={
        Array [
          0,
          0,
          0,
          0,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      font={Object {}}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={Array []}
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    >
      <RNSVGDefs>
        <RNSVGClipPath
          name="prefix__a"
        >
          <RNSVGPath
            d="M0 0h595.276v841.89H0z"
            fill={
              Array [
                0,
                0,
                0,
                0,
                1,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth="1"
            x={0}
            y={0}
          />
        </RNSVGClipPath>
      </RNSVGDefs>
      <RNSVGGroup
        clipPath="prefix__a"
        fill={
          Array [
            0,
            0,
            0,
            0,
            1,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        font={Object {}}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            -81.5,
            -223.558,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={Array []}
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth="1"
        x={0}
        y={0}
      >
        <RNSVGPath
          d="M97 479.64h414.994c7.68.084 9.719 2.543 9.75 8.93v70.695c.145 5.773-2.422 8.912-9.75 8.93H97c-8.811-.24-10.92-3.589-11-8.93V488.57c-.008-5.497 3.156-8.846 11-8.93z"
          fill={null}
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeMiterlimit",
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={
            Array [
              0,
              1,
              1,
              1,
              1,
            ]
          }
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={2}
          strokeLinejoin={0}
          strokeMiterlimit={3}
          strokeOpacity={1}
          strokeWidth="9"
          x={0}
          y={0}
        />
        <RNSVGPath
          d="M86 347.07v116.625h435.75v-199.5l-33.375-21-33 21v135h-7.5v-89.25l-37.125-23.25-34.875 23.25v89.25H368v-41.25l-19.125-31.125h-15.75v-12.375h-23.25v12.375H295.25l-18 31.125v41.25h-7.125v-35.25L233.5 223.695l-39.875 140.25v35.25h-7.875V347.07l-51.375-32.625z"
          fill={
            Array [
              0,
              1,
              1,
              1,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "stroke",
              "strokeLinecap",
              "strokeMiterlimit",
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={
            Array [
              0,
              1,
              1,
              1,
              1,
            ]
          }
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={2}
          strokeLinejoin={0}
          strokeMiterlimit={3}
          strokeOpacity={1}
          strokeWidth="1"
          x={0}
          y={0}
        />
        <RNSVGPath
          d="M148.398 542.468h-16.687l-9.586-25.289-3.563-.562v-10.172h21.891v10.172l-2.578.562 4.055 13.336 4.054-13.336-2.578-.562v-10.172h18.117v10.172l-3.539.562zm48.352-.023h-12.539l-1.172-5.555h-9.211l-1.172 5.555h-12.539V531.57l2.719-.539 6.492-21.586h18.188l6.539 21.586 2.695.539zm-18.328-25.922l-3.164 12.961h6.351zm38.719 2.695v14.227q.984 0 1.875-.27.89-.269 1.652-.703.762-.434 1.383-.961.621-.527 1.09-1.066h3.914v12h-26.813v-9.352l2.813-.539v-13.336l-2.813-.539v-9.234h19.735v9.234zm50.976-.539l-2.836.539q-.023.703-.023 1.371v4.91q0 4.688-1.289 8.028-1.289 3.34-3.492 5.472-2.204 2.133-5.168 3-2.965.868-6.293.868-3.844 0-7.184-.868-3.34-.867-5.812-3.011-2.473-2.145-3.891-5.473-1.418-3.328-1.418-8.016v-6.281l-2.813-.539v-9.234h18.305v9.234l-2.812.539v3.926q0 .574.011 1.066.012.492.012.856v.48q0 .539.023 1.254.024.715.188 1.477.164.761.504 1.5.34.738.961 1.324.621.586 1.57.949.949.363 2.356.363 1.406 0 2.379-.363.972-.363 1.593-.961.621-.597.973-1.347.351-.75.504-1.512.152-.762.187-1.477.035-.715.035-1.254v-.527q0-.363-.011-.844-.012-.48-.012-1.031V519.218l-2.812-.539v-9.234h16.265zm20.555.188v5.085l6.492-1.382v6.679l-6.492-1.406v5.18q1.406 0 2.719-.199 1.312-.2 2.437-.551 1.125-.352 2.063-.821.937-.468 1.617-1.007h3.211v12H271.75v-9.352l2.812-.539v-13.289l-2.812-.539v-9.281h28.969v12h-3.211q-.68-.516-1.617-.985-.938-.468-2.063-.82-1.125-.352-2.437-.563-1.313-.21-2.719-.21zm14.367-12.422h33v12h-3.937q-.399-.516-.915-1.055-.515-.539-1.148-.973-.633-.433-1.383-.703-.75-.269-1.617-.269v16.242l3 .586v10.172h-21v-10.172l3-.586v-16.242q-.867 0-1.617.269-.75.27-1.383.703-.633.434-1.148.973-.516.539-.914 1.055h-3.938zm54.328 36.422q-4.125 0-7.722-.879-3.598-.879-6.258-3.024-2.66-2.144-4.196-5.472-1.535-3.329-1.535-7.993 0-4.57 1.535-7.793 1.536-3.222 4.207-5.25 2.672-2.027 6.258-2.964 3.586-.938 7.711-.938 4.102 0 7.699.938 3.598.937 6.282 2.964 2.683 2.028 4.23 5.25 1.547 3.223 1.547 7.793 0 3.094-.703 5.614-.703 2.519-1.981 4.476-1.277 1.957-3.07 3.375t-3.996 2.344q-2.203.926-4.734 1.242-2.532.317-5.274.317zm0-24.329q-1.383 0-2.332.352-.949.352-1.57.914-.621.563-.973 1.289-.351.727-.504 1.488-.152.762-.187 1.5-.035.739-.035 1.301 0 .539.023 1.278.023.738.164 1.546.141.809.469 1.606.328.797.949 1.43.621.632 1.594 1.019.972.387 2.402.387 1.406 0 2.379-.375.973-.375 1.594-.996.621-.621.972-1.395.352-.773.504-1.558.153-.786.188-1.536t.035-1.289q0-.562-.035-1.3-.035-.739-.188-1.512-.152-.774-.504-1.512-.351-.738-.972-1.324-.621-.586-1.594-.949-.973-.364-2.379-.364zm49.266 23.93H390.93l-9-23.273-3.352-.516v-9.234h21.399v9.234l-2.438.516 3.82 12.281 3.821-12.281-2.438-.516v-9.234h21.399v9.234l-2.414.516 3.796 12.281 3.821-12.281-2.438-.516v-9.352h16.219v9.352l-3.328.516-9 23.273h-15.68l-4.265-12.68zm61.711-.023l-11.274-17.321v7.43l2.836.516v9.375h-14.109v-9.352l2.812-.539v-13.336l-2.812-.539v-9.234h16.922l11.273 17.789v-7.969l-2.812-.586v-9.234h14.086v9.234l-2.813.539v13.336l2.813.539v9.352z"
          fill={
            Array [
              0,
              1,
              1,
              1,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth="1"
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    style={
      Object {
        "marginBottom": "12%",
        "width": "65%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Roboto",
          "fontSize": 17,
          "marginBottom": "4%",
          "textAlign": "center",
        }
      }
    >
      Your first time at ValueTown?
    </Text>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 5,
            "elevation": 3,
            "fontSize": 16,
            "justifyContent": "center",
            "padding": 16,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#004D40",
              "fontFamily": "Roboto",
            }
          }
        >
          CONTINUE AS NEW USER
        </Text>
      </View>
    </View>
  </View>
</View>
`;
